--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,147 @@
 ---
 
 @string{aps = {American Physical Society,}}
+@BOOK{noauthor_2020-gc,
+  title    = "用數學學程式: 教你用數學思維開啟程式設計之門",
+  year     =  2020,
+  language = "zh", 
+  abbr={Textbook}
+}
+
+@INPROCEEDINGS{9356156,
+  author={Wu, Shih-Lun and Tung, Hsiao-Yen and Hsu, Yu-Lun},
+  booktitle={2020 19th IEEE International Conference on Machine Learning and Applications (ICMLA)}, 
+  title={Deep Learning for Automatic Quality Grading of Mangoes: Methods and Insights}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={446-453},
+  keywords={Deep learning;Training;Analytical models;Transfer learning;Neural networks;Task analysis;Principal component analysis;quality grading of fruits;mangoes;computer vision;convolutional neural networks (CNN);transfer learning},
+  doi={10.1109/ICMLA51294.2020.00076}, 
+  abbr={ICMLA2020}
+}
+
+@article{doi:10.1177/21925682231181875,
+author = {Tzu-Yi Chou and Fon-Yih Tsuang and Yu-Lun Hsu and Chung Liang Chai},
+title ={Surgical Versus Non-Surgical Treatment for Thoracolumbar Burst Fractures Without Neurological Deficit: A Systematic Review and Meta-Analysis},
+journal = {Global Spine Journal},
+volume = {14},
+number = {2},
+pages = {740-749},
+year = {2024},
+doi = {10.1177/21925682231181875},
+note ={PMID: 37294595},
+URL = {  https://doi.org/10.1177/21925682231181875 },
+eprint = { https://doi.org/10.1177/21925682231181875},
+abstract = { Study Design A systematic review and meta-analysis.Objective To update the systematic review comparing the outcomes between surgical and non-surgical treatment for thoracolumbar burst fractures without neurological deficit.Methods We registered a protocol in PROSPERO (ID: CRD42021291769) and searched Medline, Embase, Web of Science, and Google Scholar databases. Surgical and non-surgical treatments were compared in patients with thoracolumbar burst fractures without neurological deficits. Predefined outcomes at ≥6 months included pain (defined as a visual analog scale [VAS] of 0-100), functional outcomes (Oswestry Disability Index [ODI] of 0-50 and Roland-Morris Disability Questionnaire [RMDQ] of 0-24), and kyphotic angulation.Results Nineteen studies involving 1056 patients were included in the analyses. For outcomes at ≥6 months, little to no difference was found in pain VAS score (mean difference, .95 [95\% confidence interval {CI}, -6.02 to 7.92]; 827 participants; 15 studies; I2 = 92\%), ODI (mean difference, -1.40 [95\% CI, -5.11 to 2.31]; 446 participants; 7 studies; I2 = 79\%), and RMDQ (mean difference, -.73 [95\% CI, -5.13 to 3.66]; 216 participants; 5 studies; I2 = 77\%). The kyphotic angulation in the surgery group was 6.35° lower than that in the non-surgery group (mean difference, -6.56° [95\% CI, -10.26° to -2.87°]; 527 participants; ten studies; I2 = 86\%). The trial sequential analysis indicated all outcomes reached adequate statistical power. The certainty of the evidence for all 4 outcomes was very low. For the analysis of minimally invasive procedures compared to traditional open surgeries, a statistically significant subgroup difference was found for VAS and ODI (P < .01 and P < .04, respectively).Conclusion Surgical and non-surgical treatments showed little or no difference in outcomes at ≥6 months. This review provides a conclusion with adequate statistical power by including non-randomized studies. However, non-randomized studies also lowered the certainty of the evidence to a very low level. },
+abbr={Global Spine Journal}
+}
+
+
+@article{TSUANG2024,
+title = {Long-term reoperation after decompression with versus without fusion among patients with degenerative lumbar spinal stenosis: a systematic review and meta-analysis},
+journal = {The Spine Journal},
+year = {2024},
+issn = {1529-9430},
+doi = {https://doi.org/10.1016/j.spinee.2024.11.015},
+url = {https://www.sciencedirect.com/science/article/pii/S1529943024011549},
+author = {Fon-Yih Tsuang and Yu-Lun Hsu and Tzu-Yi Chou and Chung Liang Chai},
+keywords = {Lumbar spinal stenosis, Lumbar canal stenosis, Decompression, Laminectomy, Spinal fusion, Reoperation},
+abstract = {ABSTRACT
+BACKGROUND
+The debate over adding fusion after decompression in lumbar spinal stenosis patients without spondylolisthesis is due to the "absence of evidence" in its benefits, particularly in reoperation. However, this “absence of evidence” does not indicate “evidence of absence.”
+PURPOSE
+To investigate the reoperation rates following the addition of fusion after decompression in patients with lumbar spinal stenosis without spondylolisthesis.
+STUDY DESIGN
+Systematic review and meta-analysis.
+METHODS
+We searched Medline, Embase, Web of Science, and Google Scholar databases on December 12, 2021, with an updated search conducted on April 06, 2023. Inclusion criteria were adult patients with lumbar spinal stenosis. Exclusions comprised cases of spondylolisthesis and instabilities. The occurrence of reoperation was summarized using odds ratios (OR), while other outcomes were presented as mean differences. We employed a Cox-based shared-frailty model with random effects for the time-to-event analysis of reoperation. Additionally, we used a 2-stage method to validate our estimates. Heterogeneity variance within the random-effects model was estimated using the Hartung-Knapp-Sidik-Jonkman method.
+RESULTS
+A total of 1973 studies were identified and screened, of which 48 met selection criteria, and 17 were included in the meta-analysis. Comparison between fusion and non-fusion groups in patients with lumbar stenosis and neurological claudication revealed no significant difference in reoperation rates (odds ratio: 1.13 [95% CI: 0.88 to 1.46]; 8016 participants; 14 studies; I2 = 0%). Bayesian analysis indicated an 8.9-fold likelihood of similar reoperation rates. Time-to-reoperation analysis revealed a 16.46 months delay in the fusion group, though not statistically significant (mean difference: 16.46 [95% CI: -3.13–36.04]; 83 participants; 3 studies; I2 = 46%). Consistently, ODI, back pain, and leg pain VAS showed no significant differences. The certainty of the evidence was low for odds of reoperation and leg pain VAS, and very low for the remaining outcomes.
+CONCLUSION
+In lumbar spinal stenosis patients without spondylolisthesis, the addition of fusion after decompression showed limited benefits in terms of reoperation rates, ODI, and leg pain.},
+abbr={The Spine Journal}
+}
+
+
+@inproceedings{10.1145/3643834.3661538,
+bibtex_show={true},
+author = {Chang, Chiao-Ju and Hsu, Yu Lun and Tan, Wei Tian Mireille and Chang, Yu-Cheng and Lu, Pin Chun and Chen, Yu and Wang, Yi-Han and Chen, Mike Y.},
+title = {Exploring Augmented Reality Interface Designs for Virtual Meetings in Real-world Walking Contexts},
+year = {2024},
+isbn = {9798400705830},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3643834.3661538},
+doi = {10.1145/3643834.3661538},
+abstract = {Research has shown that walking during meetings improves creativity, memory, attention, health, and happiness. While mobile technologies have freed users from having to be stationary during virtual meetings, mobile phones pose several usability challenges, such as reduced productivity due to small screens and safety concerns. In this paper, we present the first exploration of augmented reality (AR) interface design for virtual meetings in real-world walking conditions. We conducted design sessions in-situ with 16 user interface and AR designers using a 2x2 experimental design: meeting while walking in two levels of traffic conditions and with two types of meeting formats. Results show that the designed AR windows averaged 14.5 times in viewing size compared to the most popular smartphone screens. Also, Traffic Level significantly affected the size, opacity, and placement of windows, as well as the preference of anchoring modes, while Meeting Format significantly affected size and opacity. Furthermore, clustering analysis identified two groups of designs that can serve as initial reference designs for further customization and research.},
+booktitle = {Proceedings of the 2024 ACM Designing Interactive Systems Conference},
+pages = {391–408},
+numpages = {18},
+keywords = {Augmented Reality, User Interface Design, Walking Virtual Meeting},
+location = {Copenhagen, Denmark},
+series = {DIS '24}, 
+abbr={DIS'24}
+}
+@article{10.1145/3676500,
+bibtex_show={true},
+  author = {Chang, Yu-Cheng and Wang, Yen-Pu and Chang, Chiao-Ju and Tan, Wei Tian Mireille and Hsu, Yu Lun and Chen, Yu and Chen, Mike Y.},
+  title = {Experience from Designing Augmented Reality Browsing Interfaces for Real-world Walking Scenarios},
+  year = {2024},
+  issue_date = {September 2024},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {8},
+  number = {MHCI},
+  url = {https://doi.org/10.1145/3676500},
+  doi = {10.1145/3676500},
+  abstract = {Mobile phones have enabled users to browse information in varying mobility contexts. For high-mobility settings such as walking, however, phones pose several usability challenges, particularly safety and limited screen sizes. While Augmented Reality (AR) has been proposed to address these issues, prior work has yet to investigate AR interface design in real-world walking conditions beyond text readability and notification design. This paper presents the first exploration of AR browsing interface design and extended usage while walking in the wild. We first conducted design sessions with 12 UI designers while walking in varied environments to design the window size, distance, opacity, anchor type, and placement for three categories of apps: text, video, and mixed content. Results show that traffic level significantly affects the designed window size, whereas content type significantly affects window size, distance, opacity, and vertical placement. To gain further insights from real-world usage, we conducted a multi-day observational study with 5 participants and observed that participants on average switched among window layouts every 3.3 minutes, for reasons such as safety and the level of extended visual attention.},
+  journal = {Proc. ACM Hum.-Comput. Interact.},
+  month = sep,
+  articleno = {255},
+  numpages = {26},
+  keywords = {augmented reality, user interface design, walking user interface}, 
+  abbr={MobileHCI2024}
+}
+@inproceedings{10.1145/3613905.3648102,
+bibtex_show={true},
+author = {Hsu, Yu Lun and Lu, Chien-Ting and Lu, Li-Chun and Tam, Chih-Heng and Sun, Yu-Chieh and Wang, Ting-Kang},
+title = {AnimalSense: Understanding Beyond-human Sensory Capabilities of Animals via VR Games},
+year = {2024},
+isbn = {9798400703317},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3613905.3648102},
+doi = {10.1145/3613905.3648102},
+abstract = {Animals have sensory capabilities far beyond those of humans, including the ability to detect ultrasound, UV light, electric fields, magnetic fields, and to have panoramic vision. AnimalSense is a VR game crafted to immerse players in the extraordinary sensory worlds of animals. The game’s design leverages the concepts of sensory substitution, sensory remapping, and active learning, allowing users to explore and utilize these beyond-human sensory capabilities to overcome game challenges, thereby enhancing players’ understanding of animals’ unique senses. This paper presents three such game section designs: 1) echolocation in bats, 2) electroreception in eels, and 3) panoramic vision in spiders, showcasing how these are integrated into the gameplay.},
+booktitle = {Extended Abstracts of the CHI Conference on Human Factors in Computing Systems},
+articleno = {632},
+numpages = {6},
+keywords = {Animal Comprehension, Animals, Perceptual ranges, Sensory capabilities, Virtual Reality},
+location = {Honolulu, HI, USA},
+series = {CHI EA '24},
+abbr={CHI'24 SGC}
+}
+
+@inproceedings{10.1145/3613904.3642064,
+bibtex_show={true},
+author = {Lu, Pin-Chun and Wang, Che-Wei and Hsu, Yu Lun and Lopez, Alvaro and Tsai, Ching-Yi and Chang, Chiao-Ju and Tan, Wei Tian Mireille and Lu, Li-Chun and Chen, Mike Y.},
+title = {VeeR: Exploring the Feasibility of Deliberately Designing VR Motion that Diverges from Mundane, Everyday Physical Motion to Create More Entertaining VR Experiences},
+year = {2024},
+isbn = {9798400703300},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3613904.3642064},
+doi = {10.1145/3613904.3642064},
+abstract = {This paper explores the feasibility of deliberately designing VR motion that diverges from users’ physical movements to turn mundane, everyday transportation motion (e.g., metros, trains, and cars) into more entertaining VR motion experiences, in contrast to prior car-based VR approaches that synchronize VR motion to physical car movement exactly. To gain insight into users’ preferences for veering rate and veering direction for turning (left/right) and pitching (up/down) during the three phases of acceleration (accelerating, cruising, and decelerating), we conducted a formative, perceptual study (n=24) followed by a VR experience evaluation (n=18), all conducted on metro trains moving in a mundane, straight-line motion. Results showed that participants preferred relatively high veering rates, and preferred pitching upward during acceleration and downward during deceleration. Furthermore, while veering decreased comfort as expected, it significantly enhanced immersion (p<.01) and entertainment (p<.001) and the overall experience, with comfort being considered, was preferred by 89\% of participants.},
+booktitle = {Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems},
+articleno = {424},
+numpages = {13},
+keywords = {Motion Sensation, Opportunistic Haptic, User Experience Design, Virtual Reality},
+location = {Honolulu, HI, USA},
+series = {CHI '24},
+abbr={CHI'24}
+}
 
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
