--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -82,7 +82,8 @@ numpages = {18},
 keywords = {Augmented Reality, User Interface Design, Walking Virtual Meeting},
 location = {Copenhagen, Denmark},
 series = {DIS '24}, 
-abbr={DIS'24}
+abbr={DIS'24}, 
+selected={true}
 }
 @article{10.1145/3676500,
 bibtex_show={true},
@@ -198,7 +199,6 @@ abbr={CHI'24}
   video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
   additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
   annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
   inspirehep_id = {3255}
 }
 
